<resources>
    <string name="app_name">Pantry Pal</string>
    <string name="line_items_label">Line items:</string>
    <string name="line_items_text_def">No items yet!</string>
    <string name="add_ingredient_button">Add</string>
    <string name="done_button">Done</string>
    <string name="welcome_msg">Welcome</string>
    <string name="welcome_label">Your PantryPal</string>
    <string name="item_name_label">Ingredient name:</string>
    <string name="item_name_hint">Enter ingredient name here</string>
    <string name="item_qty_label">Quantity:</string>
    <string name="item_qty_hint">Enter ingredient quantity here</string>
    <string name="item_unit_label">Unit:</string>
    <string name="item_unit_hint">Enter ingredient unit here</string>
    <string name="item_tags_hint">Enter ingredient tags here</string>
    <string name="missing_item_fields_error">Please provide a name and a quantity!</string>
    <string name="done_button_label">Done</string>
    <string-array name="dietary_tags_array">
        <item>Vegan</item>
        <item>Kosher</item>
        <item>Gluten Free</item>
        <item>Halal</item>
        <item>Nut Free</item>
        <item>Vegetarian</item>
        <item>Dairy Free</item>
    </string-array>
    <string name="select_tags_prompt">Please select a tag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Pantry Screen Titles -->
    <string name="pantry_screen_title">My Pantry</string>

    <!-- Pantry Content Message -->
    <string name="pantry_contents_message">Pantry now has %1$d items.</string>
    <string name="pantry_empty_message">Your pantry is empty.</string>

    <!-- Button Labels -->
    <string name="button_add_ingredient">Add Ingredient</string>
    <string name="button_show_pantry">Show Pantry Contents</string>

    <!-- Ingredient Fields -->
    <string name="hint_ingredient_name">Enter Ingredient Name</string>
    <string name="hint_ingredient_quantity">Enter Quantity</string>
    <string name="hint_ingredient_unit">Enter Unit (e.g., g, ml, cups)</string>

    <!-- Error Messages -->
    <string name="error_empty_ingredient_fields">Please fill in all fields.</string>

    <!-- Accessibility Labels -->
    <string name="accessibility_add_ingredient">Add a new ingredient to your pantry</string>
    <string name="accessibility_show_pantry_contents">View all items in your pantry</string>

    <!-- UI Component Identifiers -->
    <string name="label_pantry_contents">Pantry Contents:</string>
    <string name="label_ingredient_name">Ingredient Name</string>
    <string name="label_ingredient_quantity">Quantity</string>
    <string name="label_ingredient_unit">Unit of Measure</string>
    <string name="please_fill_in_all_fields">Please fill in all fields.</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="edit_ingredient">Edit Quantity</string>
    <string name="back_to_pantry">Back to Pantry</string>
    <string name="done">Done</string>
    <string name="new_quantity">New Quantity</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="cancel">Cancel</string>
    <string name="pantry">Pantry</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="view_pantry">View Pantry</string>
    <string name="scale_recipe">Scale Recipe</string>
    <string name="cookbook">Cookbook</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="pantry_empty">Your pantry is currently empty. Add some ingredients to get started!</string>
    <string name="back_to_grocery_list">Back to Grocery List</string>
    <string name="grocery_list_empty_text">What ingredients do you need to restock?</string>
    <string name="filter_recipes">Filter Recipes</string>
    <string name="add_to_cookbook">Add to Cookbook</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="select_dietary_tags">Select Dietary Tags:</string>
    <string name="vegan">Vegan</string>
    <string name="kosher">Kosher</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="halal">Halal</string>
    <string name="nut_free">Nut Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="back_to_cookbook">Back to Cookbook</string>
    <string name="uploading_your_recipe">Uploading Your Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="cook_time_in_minutes">Cook Time (in minutes)</string>
    <string name="yield">Yield</string>
    <string name="add_ingredients">Add Ingredients:</string>
    <string name="add_instructions">Add Instructions:</string>
    <string name="instruction">Instruction</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="back_to_recipe">Back to Recipe</string>
    <string name="add_ingredients_to_recipe">Add Ingredients to Recipe:</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="delete_ingredients_from_recipe">Delete Ingredients from Recipe:</string>
    <string name="new_instruction">New Instruction</string>
    <string name="edit_instruction">Edit Instruction</string>
    <string name="edit_ingredients_in_recipe">Edit Ingredients in Recipe:</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="grocery_list">Grocery List</string>
    <string name="search_ingredients">Search Ingredients</string>
    <string name="edit_cook_time">Edit Cook Time</string>
    <string name="edit_yield">Edit Yield</string>
    <string name="ingredients">Ingredients</string>
    <string name="shop_for_ingredients">Shop for Ingredients</string>
    <string name="shop_for">Shop For</string>
    <string name="delete_ingredients">Delete Ingredients</string>
    <string name="edit_ingredients">Edit Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="edit_instructions">Edit Instructions</string>
    <string name="delete_tags">Delete Tags</string>
    <string name="add_tags">Add Tags</string>
    <string name="enter_scale_factor">Enter scale factor</string>
    <string name="scaled_ingredients_will_appear_here">Scaled Ingredients will appear here</string>
    <string name="error_invalid_scale_factor">Error: Invalid scale factor</string>
    <string name="enter_ingredient_name">Enter ingredient name</string>
    <string name="results_will_appear_here">Results will appear here</string>
    <string name="error_invalid_search_query">Error: Invalid search query</string>
    <string name="search_by_recipe_name">Search by recipe name</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="details">Details</string>
    <string name="view_cookbook">View Cookbook</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="view_grocery_list">View Grocery List</string>

    <string-array name="dietary_tags">
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Gluten-Free</item>
        <item>Keto</item>
        <item>Paleo</item>
        <item>Dairy-Free</item>
    </string-array>


</resources>