<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/itemNameText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="@string/ingredient_name" />

    <EditText
        android:id="@+id/itemQuantityText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/new_quantity"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/editButton"
        android:text="@string/edit_ingredient"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/doneButton"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
</LinearLayout>