<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Item Name Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name_label" />

            <EditText
                android:id="@+id/itemNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="text"
                android:ems="10"
                android:hint="@string/item_name_hint"
                android:inputType="text" />
        </LinearLayout>

        <!-- Item Quantity Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemQtyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_qty_label" />

            <EditText
                android:id="@+id/itemQtyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="number"
                android:ems="10"
                android:hint="@string/item_qty_hint"
                android:inputType="number" />
        </LinearLayout>

        <!-- Item Unit Input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemUnitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_unit_label" />

            <EditText
                android:id="@+id/itemUnitText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="text"
                android:ems="10"
                android:hint="@string/item_unit_hint"
                android:inputType="text" />
        </LinearLayout>


        <!-- Add Ingredient Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient_button" />
        </LinearLayout>

        <!-- Done Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done_button" />
        </LinearLayout>

        <!-- Pantry Display -->
        <TextView
            android:id="@+id/pantryDisplayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Added pantry items:"
            android:padding="16dp" />

        <!-- RecyclerView for Ingredients -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:padding="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
